--- a/index.css
+++ b/index.css
@@ -1,20 +1,11 @@
 /* Variables */
 :root {
-  --clr-primary-50: hsl(240, 100%, 96%);
-  --clr-primary-300: hsl(234, 100%, 75%);
   --clr-primary-400: hsl(234, 100%, 69%);
-  --clr-primary-500: hsl(223, 88%, 59%);
-  --clr-primary-600: hsl(234, 97%, 62%);
   --clr-neutral-100: hsl(0, 0%, 100%);
-  --clr-neutral-150: hsl(223, 12%, 89%);
-  --clr-neutral-200: hsl(198, 16%, 84%);
-  --clr-neutral-250: hsl(217, 13%, 74%);
   --clr-neutral-300: hsl(217, 14%, 54%);
   --clr-neutral-400: hsl(218, 20%, 39%);
   --clr-neutral-600: hsl(218, 31%, 30%);
-  --clr-neutral-700: hsl(218, 41%, 25%);
   --clr-neutral-800: hsl(218, 54%, 20%);
-  --clr-neutral-900: hsl(0, 0%, 0%, 1);
   --ff-primary: "poppins", sans-serif;
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
@@ -204,6 +195,8 @@ select {
 }
 
 .primary-navigation {
+  --mobile-nav-bg: hsla(234, 100%, 69%, 0.7);
+
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -211,7 +204,7 @@ select {
   inset: 0;
   z-index: 1000;
   padding: min(30vh, 5rem) 1rem;
-  background: var(--clr-primary-400);
+  background: var(--mobile-nav-bg, var(--clr-primary-400));
   font-weight: var(--fw-semibold);
   overflow: hidden;
   list-style: none;
@@ -246,7 +239,6 @@ select {
     background: transparent;
     transform: none;
     transition: none;
-    color: var(--clr-neutral-400);
     font-weight: var(--fw-medium);
   }
 
@@ -434,6 +426,9 @@ select {
 }
 
 .project__stacks {
+  --background: hsl(225, 44%, 96%);
+  --color: hsl(234, 100%, 75%);
+
   display: flex;
   gap: 0.5rem;
 }
@@ -441,9 +436,10 @@ select {
 .project__stacks-li {
   max-width: fit-content;
   padding: 0.25rem 0.75rem;
-  background: var(--clr-primary-50);
+  background: var(--background);
   list-style: none;
   border-radius: 0.5rem;
+  color: var(--color);
 }
 
 @media (min-width: 768px) and (max-width: 1000px) {
@@ -496,6 +492,8 @@ select {
 
 /* Footer Myself */
 .footer {
+  --clr-footer-paragraph: hsl(240, 100%, 96%);
+
   padding: 6rem 0 0 0;
   background: var(--clr-neutral-100);
   border-top-right-radius: 90px;
@@ -547,7 +545,11 @@ select {
 /* Accordion */
 
 .accordion {
-  border-bottom: 1px solid var(--clr-neutral-150);
+  --accordion-text: hsl(218, 41%, 25%);
+  --accordion-bg: hsl(225, 44%, 96%);
+  --accordion-bottom: hsl(223, 12%, 89%);
+
+  border-bottom: 1px solid var(--accordion-bottom);
 }
 
 .accordion__intro {
@@ -570,6 +572,7 @@ select {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  color: var(--accordion-text);
 }
 
 .accordion__ul .accordion__li {
@@ -577,7 +580,7 @@ select {
   align-items: center;
   gap: 0.8rem;
   padding: 0.6rem 0.7rem;
-  background: var(--clr-neutral-150);
+  background: var(--accordion-bg);
   list-style: none;
   border-radius: 0.5rem;
 }
@@ -613,6 +616,8 @@ select {
 }
 
 .contact__form {
+  --border: hsl(198, 16%, 84%);
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -623,7 +628,7 @@ select {
 .contact__form > * {
   padding: 0.5rem;
   width: 100%;
-  border: 1px solid var(--clr-neutral-200);
+  border: 1px solid var(--border);
 }
 
 .contact__form--input::placeholder {
@@ -759,12 +764,8 @@ select {
 }
 
 /* Text Color Utilities */
-.text-primary-50 {
-  color: var(--clr-primary-50);
-}
-
-.text-primary-300 {
-  color: var(--clr-primary-300);
+.text-footer-paragraph {
+  color: var(--clr-footer-paragraph);
 }
 
 .text-primary-400 {
@@ -779,24 +780,12 @@ select {
   color: var(--clr-neutral-300);
 }
 
-.text-neutral-400 {
-  color: var(--clr-neutral-400);
-}
-
 .text-neutral-600 {
   color: var(--clr-neutral-600);
 }
 
-.text-neutral-700 {
-  color: var(--clr-neutral-700);
-}
-
 .text-neutral-800 {
   color: var(--clr-neutral-800);
-}
-
-.text-neutral-900 {
-  color: var(--clr-neutral-900);
 }
 
 /* Font Weight Utilities */
@@ -893,17 +882,18 @@ select {
 .social-icons-img:hover,
 .social-icons-img:focus {
   transform: scale(1.05);
-  filter: drop-shadow(1px 2px 1px var(--clr-primary-300));
 }
 
 /* Button Interaction */
 .button {
+  --button-color: hsl(223, 88%, 59%);
+
   display: inline-flex;
   max-width: fit-content;
   padding: 0.75rem;
   background: transparent;
   font-weight: 500;
-  color: var(--clr-primary-500);
+  color: var(--button-color);
   cursor: pointer;
   border: 1px solid var(--clr-primary-400);
   border-radius: 0.5rem;
@@ -912,7 +902,9 @@ select {
 
 .button:hover,
 .button:focus-visible {
-  background: var(--clr-primary-600);
+  --button-hover-bg: hsl(234, 97%, 62%);
+
+  background: var(--button-hover-bg);
   color: var(--clr-neutral-100);
 }
 
