--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ select {
   position: fixed;
   top: 35px;
   right: 30px;
-  background-image: url(/images/icon-close.svg);
+  background-image: url("./images/icon-close.svg");
 }
 
 .primary-navigation {
