--- a/index.css
+++ b/index.css
@@ -70,8 +70,6 @@
 body,
 h1,
 h2,
-h3,
-h4,
 p,
 figure,
 blockquote,
@@ -154,6 +152,13 @@ select {
   -moz-box-shadow: 1px 4px 8px -2px rgba(0, 0, 0, 0.57);
   overflow: hidden;
   border-bottom-left-radius: 90px;
+}
+
+.header p {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
 }
 
 .nav-wrapper {
@@ -651,8 +656,7 @@ select {
 }
 
 .contact__form--button:active {
-  box-shadow:
-    inset 5px 5px 3px -3px var(--clr-primary-400),
+  box-shadow: inset 5px 5px 3px -3px var(--clr-primary-400),
     inset -5px -5px 3px -3px var(--clr-primary-400),
     inset 5px -5px 3px -3px var(--clr-primary-400),
     inset -5px 5px 3px -3px var(--clr-primary-400);
@@ -911,6 +915,7 @@ select {
 }
 
 .button:hover,
+.contact__form--button:hover,
 .button:focus-visible {
   background: var(--clr-primary-600);
   color: var(--clr-neutral-100);
@@ -918,8 +923,7 @@ select {
 
 .button:active {
   border: 1px solid var(--clr-neutral-100);
-  box-shadow:
-    inset 5px 5px 3px -3px var(--clr-neutral-100),
+  box-shadow: inset 5px 5px 3px -3px var(--clr-neutral-100),
     inset -5px -5px 3px -3px var(--clr-neutral-100),
     inset 5px -5px 3px -3px var(--clr-neutral-100),
     inset -5px 5px 3px -3px var(--clr-neutral-100);
