--- a/index.css
+++ b/index.css
@@ -234,7 +234,7 @@ select {
   .primary-navigation {
     flex-direction: row;
     gap: 2rem;
-    position: inherit;
+    position: initial;
     padding: 0;
     background: transparent;
     transform: none;
@@ -269,54 +269,54 @@ select {
 }
 
 .hero-wrapper .rectangle4 {
-  top: 10px;
-  right: -100px;
+  top: 0.625rem;
+  right: -6.25rem;
 }
 
 .hero-wrapper .ellipse3 {
-  top: 90px;
-  right: -180px;
+  top: 5.625rem;
+  right: -11rem;
 }
 
 .hero-wrapper .rectangle7 {
-  top: 110px;
-  left: 130px;
+  top: 6.875rem;
+  left: 8.125rem;
   rotate: 45deg;
 }
 
 .hero-wrapper .ellipse5 {
-  top: 122px;
-  left: 134px;
+  top: 7.625rem;
+  left: 8.375rem;
 }
 
 .hero-wrapper .rectangle6 {
-  top: 70px;
-  left: -70px;
+  top: 4.375rem;
+  left: -4.375rem;
 }
 
 .hero-wrapper .ellipse11 {
-  top: 100px;
-  left: -45px;
+  top: 6.25rem;
+  left: -2.813rem;
 }
 
 .hero-wrapper .ellipse12 {
-  bottom: 190px;
-  right: 40px;
+  bottom: 11.875rem;
+  right: 2.5rem;
 }
 
 .hero-wrapper .ellipse13 {
-  bottom: 156px;
-  right: 50px;
+  bottom: 9.75rem;
+  right: 3.125rem;
 }
 
 .hero-wrapper .ellipse4 {
-  bottom: 40px;
-  right: 140px;
+  bottom: 2.5rem;
+  right: 8.75rem;
 }
 
 .hero-wrapper .rectangle5 {
-  bottom: 10px;
-  right: 160px;
+  bottom: 0.625rem;
+  right: 10rem;
 }
 
 @media (min-width: 768px) {
@@ -325,54 +325,54 @@ select {
   }
 
   .hero-wrapper .rectangle4 {
-    top: 50px;
-    right: 10px;
+    top: 3.125rem;
+    right: 0.625rem;
   }
 
   .hero-wrapper .ellipse3 {
-    top: 130px;
-    right: -50px;
+    top: 8.125rem;
+    right: -3.125rem;
   }
 
   .hero-wrapper .rectangle7 {
-    top: 153px;
-    left: 49%;
-    rotate: 180deg;
+    top: 9.5625rem;
+    left: 50%;
+    transform: rotate(180deg);
   }
 
   .hero-wrapper .ellipse5 {
-    top: 170px;
+    top: 10.625rem;
     left: 50%;
   }
 
   .hero-wrapper .rectangle6 {
-    top: 90px;
+    top: 5.625rem;
     left: 0;
   }
 
   .hero-wrapper .ellipse11 {
-    top: 150px;
-    left: 40px;
+    top: 9.375rem;
+    left: 2.5rem;
   }
 
   .hero-wrapper .ellipse12 {
-    bottom: 70px;
-    left: 120px;
+    bottom: 4.375rem;
+    left: 7.5rem;
   }
 
   .hero-wrapper .ellipse13 {
-    bottom: 35px;
-    left: 100px;
+    bottom: 2.1875rem;
+    left: 6.25rem;
   }
 
   .hero-wrapper .ellipse4 {
-    bottom: 40px;
-    right: 270px;
+    bottom: 2.5rem;
+    right: 16.875rem;
   }
 
   .hero-wrapper .rectangle5 {
-    bottom: 10px;
-    right: 290px;
+    bottom: 0.625rem;
+    right: 18.125rem;
   }
 }
 
@@ -668,28 +668,28 @@ select {
 }
 
 .contact .rectangle4 {
-  top: 15px;
-  right: -22px;
+  top: 0.95rem;
+  right: -1.05rem;
 }
 
 .contact .ellipse3 {
-  top: 55px;
-  right: -50px;
+  top: 3.125rem;
+  right: -3.05rem;
 }
 
 .contact .ellipse12 {
-  top: 60px;
-  right: 52%;
+  top: 3.7rem;
+  left: 50%;
 }
 
 .contact .rectangle7 {
-  bottom: 5%;
-  right: 8%;
+  bottom: 1.5rem;
+  right: 1.8rem;
 }
 
 .contact .ellipse5 {
-  bottom: 4%;
-  right: 20%;
+  bottom: 1.5rem;
+  right: 5.5rem;
 }
 
 .contact .rectangle6 {
@@ -714,31 +714,31 @@ select {
   }
 
   .contact .rectangle7 {
-    top: 320px;
-    left: 55px;
+    top: 20rem;
+    left: 3.438rem;
   }
 
   .contact .ellipse5 {
-    top: 360px;
-    left: 55px;
+    top: 22.5rem;
+    left: 3.438rem;
   }
 
   .contact .rectangle6 {
     display: block;
-    bottom: 80px;
-    left: 128px;
+    bottom: 5rem;
+    left: 8rem;
   }
 
   .contact .ellipse11 {
     display: block;
-    bottom: 64px;
-    left: 160px;
+    bottom: 4rem;
+    left: 10rem;
   }
 
   .contact .ellipse13 {
     display: block;
-    bottom: 130px;
-    right: 50px;
+    bottom: 8.125rem;
+    right: 3.125rem;
   }
 }
 
@@ -843,7 +843,7 @@ select {
 }
 
 .fs-400 {
-  font-size: 1rem;
+  font-size: var(--fs-400);
 }
 
 .fs-450 {
