--- a/index.css
+++ b/index.css
@@ -580,7 +580,8 @@ select {
 }
 
 .modal__stacks {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
@@ -606,9 +607,25 @@ select {
   fill: var(--clr-neutral-100);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1000px) {
   .modal-wrapper {
-    inset: 2.5rem 4rem 2.5rem 4rem;
+    inset: 2rem 2rem;
+  }
+
+  .grid-columns {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding-bottom: 4rem;
+  }
+
+  .modal__info {
+    grid-column: 1 / 3;
+  }
+}
+
+@media (min-width: 1000px) {
+  .modal-wrapper {
+    inset: 2.5rem 4rem;
   }
 
   .modal__img {
